--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "692c8937",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.prompts.few_shot import FewShotPromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
     "\n",
     "chat = ChatOpenAI(temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()])"
@@ -16,66 +17,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "4bdf8a90",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "philo_prompt = ChatPromptTemplate.from_messages(\n",
-    "  [\n",
-    "    (\"system\", \"You are a renowned philosopher. Please answer my questions philosophically and only in Korean.\"),\n",
-    "    (\"human\", \"{question}\"),\n",
-    "  ]\n",
-    ")\n",
-    "\n",
-    "philo_chain = philo_prompt | chat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d96a9bf8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "other_prompt = ChatPromptTemplate.from_messages(\n",
-    "  [\n",
-    "    (\"system\", \"Think critically about the other person's opinion, state your opinion as 'for' or 'against' and explain the reasons in Korean.\"),\n",
-    "    (\"human\", \"{answer}\"),\n",
-    "  ]\n",
-    ")\n",
-    "\n",
-    "other_chain = other_prompt | chat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "7fbbd2ff",
+   "execution_count": 7,
+   "id": "4973ec8a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "도덕적 딜레마인 '트롤리 딜레마'는 인간의 윤리적 판단력을 시험하는 중요한 문제입니다. 이 딜레마를 통해 우리는 희생을 피하는 것과 최대의 효용을 추구하는 것 사이의 갈등을 직면하게 됩니다. 이는 우리가 어떤 가치를 중요시하고 어떤 행동을 선택하는지에 대해 깊이 생각하게 합니다. 결국 이 딜레마는 우리의 도덕적 가치관과 행동에 대한 책임을 고민하게 하는 의미있는 과제라고 생각합니다.모순을 발견하지 못했습니다. 해당 주장을 받아들입니다."
+      "답변: \n",
+      "내가 아는 것은:\n",
+      "수도: 서울\n",
+      "언어: 한국어\n",
+      "음식: 김치 그리고 불고기\n",
+      "화폐: 대한민국 원 (₩, KRW)"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "AIMessageChunk(content='모순을 발견하지 못했습니다. 해당 주장을 받아들입니다.')"
+       "AIMessageChunk(content='답변: \\n내가 아는 것은:\\n수도: 서울\\n언어: 한국어\\n음식: 김치 그리고 불고기\\n화폐: 대한민국 원 (₩, KRW)')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final_chain = {\"answer\": philo_chain} | other_chain\n",
+    "examples = [\n",
+    "{\n",
+    "\"question\": \"프랑스을(를) 알고 있니?\",\n",
+    "\"answer\": \"\"\"\n",
+    "내가 아는 것은:\n",
+    "수도: 파리\n",
+    "언어: 프랑스어\n",
+    "음식: 와인 그리고 치즈\n",
+    "화폐: 유로 (€, EUR)\n",
+    "\"\"\",\n",
+    "},\n",
+    "{\n",
+    "\"question\": \"이탈리아을(를) 알고 있니?\",\n",
+    "\"answer\": \"\"\"\n",
+    "내가 아는 것은:\n",
+    "수도: 로마\n",
+    "언어: 이탈리아어\n",
+    "음식: 피자 그리고 파스타\n",
+    "화폐: 유로 (€, EUR)\n",
+    "\"\"\",\n",
+    "},\n",
+    "{\n",
+    "\"question\": \"그리스을(를) 알고 있니?\",\n",
+    "\"answer\": \"\"\"\n",
+    "내가 아는 것은:\n",
+    "수도: 아테네\n",
+    "언어: 그리스어\n",
+    "음식: 수블라키 그리고 페타 치즈\n",
+    "화폐: 유로 (€, EUR)\n",
+    "\"\"\",\n",
+    "},\n",
+    "]\n",
     "\n",
-    "final_chain.invoke({\"question\": \"What do you think about the trolley dilemma?\"})"
+    "example_template = \"\"\"\n",
+    "질문: {question}\n",
+    "답변: {answer}\n",
+    "\"\"\"\n",
+    "\n",
+    "example_prompt = PromptTemplate.from_template(example_template)\n",
+    "\n",
+    "prompt = FewShotPromptTemplate(\n",
+    "  example_prompt=example_prompt,\n",
+    "  examples=examples,\n",
+    "  suffix=\"질문: {country}을(를) 알고 있니?\",\n",
+    "  input_variables=[\"country\"]\n",
+    ")\n",
+    "\n",
+    "prompt.format(country=\"스페인\")\n",
+    "\n",
+    "chain = prompt | chat\n",
+    "\n",
+    "chain.invoke({\"country\": \"한국\"})"
    ]
   }
  ],
