--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "692c8937",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,7 @@
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.prompts.few_shot import FewShotPromptTemplate\n",
+    "from langchain.prompts.example_selector.base import BaseExampleSelector\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
     "\n",
     "chat = ChatOpenAI(temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()])"
@@ -17,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "4973ec8a",
    "metadata": {},
    "outputs": [
@@ -25,26 +26,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "답변: \n",
+      "\n",
+      "답변:\n",
       "내가 아는 것은:\n",
       "수도: 서울\n",
       "언어: 한국어\n",
-      "음식: 김치 그리고 불고기\n",
+      "음식: 김치, 불고기\n",
       "화폐: 대한민국 원 (₩, KRW)"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "AIMessageChunk(content='답변: \\n내가 아는 것은:\\n수도: 서울\\n언어: 한국어\\n음식: 김치 그리고 불고기\\n화폐: 대한민국 원 (₩, KRW)')"
+       "AIMessageChunk(content='\\n답변:\\n내가 아는 것은:\\n수도: 서울\\n언어: 한국어\\n음식: 김치, 불고기\\n화폐: 대한민국 원 (₩, KRW)')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "class CustomExampleSelector(BaseExampleSelector):\n",
+    "    def __init__(self, examples):\n",
+    "        self.examples = examples\n",
+    "\n",
+    "    def add_example(self, example):\n",
+    "        self.examples.append(example)\n",
+    "\n",
+    "    def select_examples(self, input_variables):\n",
+    "        from random import choice\n",
+    "        return [ choice(self.examples) ]\n",
+    "\n",
     "examples = [\n",
     "{\n",
     "\"question\": \"프랑스을(를) 알고 있니?\",\n",
@@ -85,9 +98,11 @@
     "\n",
     "example_prompt = PromptTemplate.from_template(example_template)\n",
     "\n",
+    "example_selector = CustomExampleSelector(examples=examples)\n",
+    "\n",
     "prompt = FewShotPromptTemplate(\n",
     "  example_prompt=example_prompt,\n",
-    "  examples=examples,\n",
+    "  example_selector=example_selector,\n",
     "  suffix=\"질문: {country}을(를) 알고 있니?\",\n",
     "  input_variables=[\"country\"]\n",
     ")\n",
