--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "692c8937",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.prompts import PromptTemplate\n",
-    "from langchain.prompts.few_shot import FewShotPromptTemplate\n",
-    "from langchain.prompts.example_selector.base import BaseExampleSelector\n",
+    "from langchain.prompts.pipeline import PipelinePromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
     "\n",
     "chat = ChatOpenAI(temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()])"
@@ -18,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "4973ec8a",
    "metadata": {},
    "outputs": [
@@ -26,92 +25,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "답변:\n",
-      "내가 아는 것은:\n",
-      "수도: 서울\n",
-      "언어: 한국어\n",
-      "음식: 김치, 불고기\n",
-      "화폐: 대한민국 원 (₩, KRW)"
+      "나는 지구의 다양한 생물들이 가장 인상적이었다. 특히 인간의 다양성과 창의성에 놀라움을 금치 못했다."
      ]
     },
     {
      "data": {
       "text/plain": [
-       "AIMessageChunk(content='\\n답변:\\n내가 아는 것은:\\n수도: 서울\\n언어: 한국어\\n음식: 김치, 불고기\\n화폐: 대한민국 원 (₩, KRW)')"
+       "AIMessageChunk(content='나는 지구의 다양한 생물들이 가장 인상적이었다. 특히 인간의 다양성과 창의성에 놀라움을 금치 못했다.')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "class CustomExampleSelector(BaseExampleSelector):\n",
-    "    def __init__(self, examples):\n",
-    "        self.examples = examples\n",
-    "\n",
-    "    def add_example(self, example):\n",
-    "        self.examples.append(example)\n",
-    "\n",
-    "    def select_examples(self, input_variables):\n",
-    "        from random import choice\n",
-    "        return [ choice(self.examples) ]\n",
-    "\n",
-    "examples = [\n",
-    "{\n",
-    "\"question\": \"프랑스을(를) 알고 있니?\",\n",
-    "\"answer\": \"\"\"\n",
-    "내가 아는 것은:\n",
-    "수도: 파리\n",
-    "언어: 프랑스어\n",
-    "음식: 와인 그리고 치즈\n",
-    "화폐: 유로 (€, EUR)\n",
-    "\"\"\",\n",
-    "},\n",
-    "{\n",
-    "\"question\": \"이탈리아을(를) 알고 있니?\",\n",
-    "\"answer\": \"\"\"\n",
-    "내가 아는 것은:\n",
-    "수도: 로마\n",
-    "언어: 이탈리아어\n",
-    "음식: 피자 그리고 파스타\n",
-    "화폐: 유로 (€, EUR)\n",
-    "\"\"\",\n",
-    "},\n",
-    "{\n",
-    "\"question\": \"그리스을(를) 알고 있니?\",\n",
-    "\"answer\": \"\"\"\n",
-    "내가 아는 것은:\n",
-    "수도: 아테네\n",
-    "언어: 그리스어\n",
-    "음식: 수블라키 그리고 페타 치즈\n",
-    "화폐: 유로 (€, EUR)\n",
-    "\"\"\",\n",
-    "},\n",
-    "]\n",
-    "\n",
-    "example_template = \"\"\"\n",
-    "질문: {question}\n",
-    "답변: {answer}\n",
+    "intro = PromptTemplate.from_template(\n",
     "\"\"\"\n",
-    "\n",
-    "example_prompt = PromptTemplate.from_template(example_template)\n",
-    "\n",
-    "example_selector = CustomExampleSelector(examples=examples)\n",
-    "\n",
-    "prompt = FewShotPromptTemplate(\n",
-    "  example_prompt=example_prompt,\n",
-    "  example_selector=example_selector,\n",
-    "  suffix=\"질문: {country}을(를) 알고 있니?\",\n",
-    "  input_variables=[\"country\"]\n",
+    "You are a role playing assistant.\n",
+    "And you are impersonating a {character}\n",
+    "\"\"\"\n",
     ")\n",
     "\n",
-    "prompt.format(country=\"스페인\")\n",
+    "example = PromptTemplate.from_template(\n",
+    "\"\"\"\n",
+    "This is an example of how you talk:\n",
     "\n",
-    "chain = prompt | chat\n",
+    "Human: {example_question}\n",
+    "You: {example_answer}\n",
+    "\"\"\"\n",
+    ")\n",
     "\n",
-    "chain.invoke({\"country\": \"한국\"})"
+    "start = PromptTemplate.from_template(\n",
+    "\"\"\"\n",
+    "Start now!\n",
+    "\n",
+    "Human: {question}\n",
+    "You:\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "final = PromptTemplate.from_template(\n",
+    "\"\"\"\n",
+    "{intro}\n",
+    "\n",
+    "{example}\n",
+    "\n",
+    "{start}\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "prompts = [\n",
+    "  (\"intro\", intro),\n",
+    "  (\"example\", example),\n",
+    "  (\"start\", start),\n",
+    "]\n",
+    "\n",
+    "full_prompt = PipelinePromptTemplate(\n",
+    "  final_prompt=final,\n",
+    "  pipeline_prompts=prompts,\n",
+    ")\n",
+    "\n",
+    "chain = full_prompt | chat\n",
+    "\n",
+    "chain.invoke({\n",
+    "  \"character\": \"외계인\",\n",
+    "  \"example_question\": \"어디서 오셨죠?\",\n",
+    "  \"example_answer\": \"나는 먼 은하에서 왔다. 나는 지구를 조사하러 왔다.\",\n",
+    "  \"question\": \"당신이 본 지구에서 가장 인상 깊었던 것은 무엇인가요?\",\n",
+    "})"
    ]
   }
  ],
