--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "692c8937",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,18 @@
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.prompts.pipeline import PipelinePromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
+    "from langchain.globals import set_llm_cache, set_debug\n",
+    "from langchain.cache import SQLiteCache\n",
+    "\n",
+    "set_llm_cache(SQLiteCache(\"llm_cache.db\"))\n",
+    "set_debug(True)\n",
     "\n",
     "chat = ChatOpenAI(temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "4973ec8a",
    "metadata": {},
    "outputs": [
@@ -25,16 +30,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "나는 지구의 다양한 생물들이 가장 인상적이었다. 특히 인간의 다양성과 창의성에 놀라움을 금치 못했다."
+      "\u001b[32;1m\u001b[1;3m[chain/start]\u001b[0m \u001b[1m[1:chain:RunnableSequence] Entering Chain run with input:\n",
+      "\u001b[0m{\n",
+      "  \"character\": \"외계인\",\n",
+      "  \"example_question\": \"어디서 오셨죠?\",\n",
+      "  \"example_answer\": \"나는 먼 은하에서 왔다. 나는 지구를 조사하러 왔다.\",\n",
+      "  \"question\": \"당신이 본 지구에서 가장 인상 깊었던 것은 무엇인가요?\"\n",
+      "}\n",
+      "\u001b[32;1m\u001b[1;3m[chain/start]\u001b[0m \u001b[1m[1:chain:RunnableSequence > 2:prompt:PipelinePromptTemplate] Entering Prompt run with input:\n",
+      "\u001b[0m{\n",
+      "  \"character\": \"외계인\",\n",
+      "  \"example_question\": \"어디서 오셨죠?\",\n",
+      "  \"example_answer\": \"나는 먼 은하에서 왔다. 나는 지구를 조사하러 왔다.\",\n",
+      "  \"question\": \"당신이 본 지구에서 가장 인상 깊었던 것은 무엇인가요?\"\n",
+      "}\n",
+      "\u001b[36;1m\u001b[1;3m[chain/end]\u001b[0m \u001b[1m[1:chain:RunnableSequence > 2:prompt:PipelinePromptTemplate] [0ms] Exiting Prompt run with output:\n",
+      "\u001b[0m{\n",
+      "  \"lc\": 1,\n",
+      "  \"type\": \"constructor\",\n",
+      "  \"id\": [\n",
+      "    \"langchain\",\n",
+      "    \"prompts\",\n",
+      "    \"base\",\n",
+      "    \"StringPromptValue\"\n",
+      "  ],\n",
+      "  \"kwargs\": {\n",
+      "    \"text\": \"\\n\\nYou are a role playing assistant.\\nAnd you are impersonating a 외계인\\n\\n\\n\\nThis is an example of how you talk:\\n\\nHuman: 어디서 오셨죠?\\nYou: 나는 먼 은하에서 왔다. 나는 지구를 조사하러 왔다.\\n\\n\\n\\nStart now!\\n\\nHuman: 당신이 본 지구에서 가장 인상 깊었던 것은 무엇인가요?\\nYou:\\n\\n\"\n",
+      "  }\n",
+      "}\n",
+      "\u001b[32;1m\u001b[1;3m[llm/start]\u001b[0m \u001b[1m[1:chain:RunnableSequence > 3:llm:ChatOpenAI] Entering LLM run with input:\n",
+      "\u001b[0m{\n",
+      "  \"prompts\": [\n",
+      "    \"Human: \\n\\nYou are a role playing assistant.\\nAnd you are impersonating a 외계인\\n\\n\\n\\nThis is an example of how you talk:\\n\\nHuman: 어디서 오셨죠?\\nYou: 나는 먼 은하에서 왔다. 나는 지구를 조사하러 왔다.\\n\\n\\n\\nStart now!\\n\\nHuman: 당신이 본 지구에서 가장 인상 깊었던 것은 무엇인가요?\\nYou:\"\n",
+      "  ]\n",
+      "}\n",
+      "나는 지구에서 가장 인상 깊은 것은 인간들의 다양성과 창의성이다. 지구 사람들은 다른 생각과 문화를 가지고 있지만 함께 살아가는 모습이 신기하다.\u001b[36;1m\u001b[1;3m[llm/end]\u001b[0m \u001b[1m[1:chain:RunnableSequence > 3:llm:ChatOpenAI] [1.22s] Exiting LLM run with output:\n",
+      "\u001b[0m{\n",
+      "  \"generations\": [\n",
+      "    [\n",
+      "      {\n",
+      "        \"text\": \"나는 지구에서 가장 인상 깊은 것은 인간들의 다양성과 창의성이다. 지구 사람들은 다른 생각과 문화를 가지고 있지만 함께 살아가는 모습이 신기하다.\",\n",
+      "        \"generation_info\": {\n",
+      "          \"finish_reason\": \"stop\"\n",
+      "        },\n",
+      "        \"type\": \"ChatGenerationChunk\",\n",
+      "        \"message\": {\n",
+      "          \"lc\": 1,\n",
+      "          \"type\": \"constructor\",\n",
+      "          \"id\": [\n",
+      "            \"langchain\",\n",
+      "            \"schema\",\n",
+      "            \"messages\",\n",
+      "            \"AIMessageChunk\"\n",
+      "          ],\n",
+      "          \"kwargs\": {\n",
+      "            \"example\": false,\n",
+      "            \"content\": \"나는 지구에서 가장 인상 깊은 것은 인간들의 다양성과 창의성이다. 지구 사람들은 다른 생각과 문화를 가지고 있지만 함께 살아가는 모습이 신기하다.\",\n",
+      "            \"additional_kwargs\": {}\n",
+      "          }\n",
+      "        }\n",
+      "      }\n",
+      "    ]\n",
+      "  ],\n",
+      "  \"llm_output\": null,\n",
+      "  \"run\": null\n",
+      "}\n",
+      "\u001b[36;1m\u001b[1;3m[chain/end]\u001b[0m \u001b[1m[1:chain:RunnableSequence] [1.22s] Exiting Chain run with output:\n",
+      "\u001b[0m[outputs]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "AIMessageChunk(content='나는 지구의 다양한 생물들이 가장 인상적이었다. 특히 인간의 다양성과 창의성에 놀라움을 금치 못했다.')"
+       "AIMessageChunk(content='나는 지구에서 가장 인상 깊은 것은 인간들의 다양성과 창의성이다. 지구 사람들은 다른 생각과 문화를 가지고 있지만 함께 살아가는 모습이 신기하다.')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,6 +159,105 @@
     "\n",
     "chain = full_prompt | chat\n",
     "\n",
+    "chain.invoke({\n",
+    "  \"character\": \"외계인\",\n",
+    "  \"example_question\": \"어디서 오셨죠?\",\n",
+    "  \"example_answer\": \"나는 먼 은하에서 왔다. 나는 지구를 조사하러 왔다.\",\n",
+    "  \"question\": \"당신이 본 지구에서 가장 인상 깊었던 것은 무엇인가요?\",\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d260020a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32;1m\u001b[1;3m[chain/start]\u001b[0m \u001b[1m[1:chain:RunnableSequence] Entering Chain run with input:\n",
+      "\u001b[0m{\n",
+      "  \"character\": \"외계인\",\n",
+      "  \"example_question\": \"어디서 오셨죠?\",\n",
+      "  \"example_answer\": \"나는 먼 은하에서 왔다. 나는 지구를 조사하러 왔다.\",\n",
+      "  \"question\": \"당신이 본 지구에서 가장 인상 깊었던 것은 무엇인가요?\"\n",
+      "}\n",
+      "\u001b[32;1m\u001b[1;3m[chain/start]\u001b[0m \u001b[1m[1:chain:RunnableSequence > 2:prompt:PipelinePromptTemplate] Entering Prompt run with input:\n",
+      "\u001b[0m{\n",
+      "  \"character\": \"외계인\",\n",
+      "  \"example_question\": \"어디서 오셨죠?\",\n",
+      "  \"example_answer\": \"나는 먼 은하에서 왔다. 나는 지구를 조사하러 왔다.\",\n",
+      "  \"question\": \"당신이 본 지구에서 가장 인상 깊었던 것은 무엇인가요?\"\n",
+      "}\n",
+      "\u001b[36;1m\u001b[1;3m[chain/end]\u001b[0m \u001b[1m[1:chain:RunnableSequence > 2:prompt:PipelinePromptTemplate] [0ms] Exiting Prompt run with output:\n",
+      "\u001b[0m{\n",
+      "  \"lc\": 1,\n",
+      "  \"type\": \"constructor\",\n",
+      "  \"id\": [\n",
+      "    \"langchain\",\n",
+      "    \"prompts\",\n",
+      "    \"base\",\n",
+      "    \"StringPromptValue\"\n",
+      "  ],\n",
+      "  \"kwargs\": {\n",
+      "    \"text\": \"\\n\\nYou are a role playing assistant.\\nAnd you are impersonating a 외계인\\n\\n\\n\\nThis is an example of how you talk:\\n\\nHuman: 어디서 오셨죠?\\nYou: 나는 먼 은하에서 왔다. 나는 지구를 조사하러 왔다.\\n\\n\\n\\nStart now!\\n\\nHuman: 당신이 본 지구에서 가장 인상 깊었던 것은 무엇인가요?\\nYou:\\n\\n\"\n",
+      "  }\n",
+      "}\n",
+      "\u001b[32;1m\u001b[1;3m[llm/start]\u001b[0m \u001b[1m[1:chain:RunnableSequence > 3:llm:ChatOpenAI] Entering LLM run with input:\n",
+      "\u001b[0m{\n",
+      "  \"prompts\": [\n",
+      "    \"Human: \\n\\nYou are a role playing assistant.\\nAnd you are impersonating a 외계인\\n\\n\\n\\nThis is an example of how you talk:\\n\\nHuman: 어디서 오셨죠?\\nYou: 나는 먼 은하에서 왔다. 나는 지구를 조사하러 왔다.\\n\\n\\n\\nStart now!\\n\\nHuman: 당신이 본 지구에서 가장 인상 깊었던 것은 무엇인가요?\\nYou:\"\n",
+      "  ]\n",
+      "}\n",
+      "\u001b[36;1m\u001b[1;3m[llm/end]\u001b[0m \u001b[1m[1:chain:RunnableSequence > 3:llm:ChatOpenAI] [2ms] Exiting LLM run with output:\n",
+      "\u001b[0m{\n",
+      "  \"generations\": [\n",
+      "    [\n",
+      "      {\n",
+      "        \"text\": \"나는 지구에서 가장 인상 깊은 것은 인간들의 다양성과 창의성이다. 지구 사람들은 다른 생각과 문화를 가지고 있지만 함께 살아가는 모습이 신기하다.\",\n",
+      "        \"generation_info\": {\n",
+      "          \"finish_reason\": \"stop\"\n",
+      "        },\n",
+      "        \"type\": \"ChatGenerationChunk\",\n",
+      "        \"message\": {\n",
+      "          \"lc\": 1,\n",
+      "          \"type\": \"constructor\",\n",
+      "          \"id\": [\n",
+      "            \"langchain\",\n",
+      "            \"schema\",\n",
+      "            \"messages\",\n",
+      "            \"AIMessageChunk\"\n",
+      "          ],\n",
+      "          \"kwargs\": {\n",
+      "            \"example\": false,\n",
+      "            \"content\": \"나는 지구에서 가장 인상 깊은 것은 인간들의 다양성과 창의성이다. 지구 사람들은 다른 생각과 문화를 가지고 있지만 함께 살아가는 모습이 신기하다.\",\n",
+      "            \"additional_kwargs\": {}\n",
+      "          }\n",
+      "        }\n",
+      "      }\n",
+      "    ]\n",
+      "  ],\n",
+      "  \"llm_output\": null,\n",
+      "  \"run\": null\n",
+      "}\n",
+      "\u001b[36;1m\u001b[1;3m[chain/end]\u001b[0m \u001b[1m[1:chain:RunnableSequence] [3ms] Exiting Chain run with output:\n",
+      "\u001b[0m[outputs]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "AIMessageChunk(content='나는 지구에서 가장 인상 깊은 것은 인간들의 다양성과 창의성이다. 지구 사람들은 다른 생각과 문화를 가지고 있지만 함께 살아가는 모습이 신기하다.')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "chain.invoke({\n",
     "  \"character\": \"외계인\",\n",
     "  \"example_question\": \"어디서 오셨죠?\",\n",
