--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,111 +2,171 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "692c8937",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.memory import ConversationBufferWindowMemory\n",
+    "from langchain.memory import ConversationSummaryBufferMemory\n",
+    "from langchain.chains import LLMChain\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
+    "from langchain.prompts import PromptTemplate\n",
     "\n",
-    "chat = ChatOpenAI(temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()])"
+    "llm = ChatOpenAI(temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()])\n",
+    "\n",
+    "memory = ConversationSummaryBufferMemory(\n",
+    "  llm=llm,\n",
+    "  max_token_limit=50,\n",
+    "  memory_key=\"chat_history\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "067c44c3",
+   "execution_count": 5,
+   "id": "48222a4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "memory = ConversationBufferWindowMemory(return_messages=True, k=3)"
+    "template = \"\"\"\n",
+    "  You are a helpful AI talking to a human.\n",
+    "\n",
+    "  {chat_history}\n",
+    "  Human: {question}\n",
+    "  You:\n",
+    "\"\"\"\n",
+    "\n",
+    "chain = LLMChain(\n",
+    "  llm=llm,\n",
+    "  memory=memory,\n",
+    "  prompt=PromptTemplate.from_template(template),\n",
+    "  verbose=True\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "591456d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_message(input, output):\n",
-    "  memory.save_context({\"input\": input}, {\"output\": output})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "8f59ece2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "add_message(1, 1)\n",
-    "add_message(2, 2)\n",
-    "add_message(3, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "f4fa84f3",
+   "execution_count": 6,
+   "id": "66851267",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "  You are a helpful AI talking to a human.\n",
+      "\n",
+      "  \n",
+      "  Human: 내 이름은 홍길동이야\n",
+      "  You:\n",
+      "\u001b[0m\n",
+      "안녕하세요, 홍길동님. 무엇을 도와드릴까요?\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "The human introduces themselves as 홍길동."
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'history': [HumanMessage(content='1'),\n",
-       "  AIMessage(content='1'),\n",
-       "  HumanMessage(content='2'),\n",
-       "  AIMessage(content='2'),\n",
-       "  HumanMessage(content='3'),\n",
-       "  AIMessage(content='3')]}"
+       "'안녕하세요, 홍길동님. 무엇을 도와드릴까요?'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "memory.load_memory_variables({})"
+    "chain.predict(question=\"내 이름은 홍길동이야\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "4a7f8028",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "add_message(4, 4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "b714bb84",
+   "execution_count": 7,
+   "id": "15fb3718",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "  You are a helpful AI talking to a human.\n",
+      "\n",
+      "  System: The human introduces themselves as 홍길동.\n",
+      "AI: 안녕하세요, 홍길동님. 무엇을 도와드릴까요?\n",
+      "  Human: 나는 서자라서 아버지를 아버지라 부르지 못한단다.\n",
+      "  You:\n",
+      "\u001b[0m\n",
+      "그것은 안타깝네요. 가족 관계는 복잡할 수 있죠. 어떻게 도와드릴까요?\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "The human introduces themselves as 홍길동. The AI greets them and asks how it can help. 홍길동 explains that they cannot call their father \"father\" because they are a servant. The AI expresses sympathy for the complicated family situation and asks how it can assist."
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'history': [HumanMessage(content='3'),\n",
-       "  AIMessage(content='3'),\n",
-       "  HumanMessage(content='5'),\n",
-       "  AIMessage(content='5'),\n",
-       "  HumanMessage(content='4'),\n",
-       "  AIMessage(content='4')]}"
+       "'그것은 안타깝네요. 가족 관계는 복잡할 수 있죠. 어떻게 도와드릴까요?'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "memory.load_memory_variables({})"
+    "chain.predict(question=\"나는 서자라서 아버지를 아버지라 부르지 못한단다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ce9c4694",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "  You are a helpful AI talking to a human.\n",
+      "\n",
+      "  System: The human introduces themselves as 홍길동. The AI greets them and asks how it can help. 홍길동 explains that they cannot call their father \"father\" because they are a servant. The AI expresses sympathy for the complicated family situation and asks how it can assist.\n",
+      "  Human: 내 이름이 뭐라 그랬지?\n",
+      "  You:\n",
+      "\u001b[0m\n",
+      "안녕하세요, 홍길동님. 어떻게 도와드릴까요?\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "The human introduces themselves as 홍길동. The AI greets them and asks how it can help. 홍길동 explains that they cannot call their father \"father\" because they are a servant. The AI expresses sympathy for the complicated family situation and asks how it can assist. 홍길동 then asks, \"What did you say my name was?\""
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'안녕하세요, 홍길동님. 어떻게 도와드릴까요?'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.predict(question=\"내 이름이 뭐라 그랬지?\")"
    ]
   }
  ],
