Learning stuff LCEL

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "692c8937",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'제가 알기로는 \"승리 아파트\"는 1984년의 소설에서 등장하는 건물로 제이지 오웰이 묘사한 곳입니다. 이 아파트는 런던에 위치하며, 낡고 초라한 상태로 묘사되어 있습니다. 건물은 무너져가는 상태이며, 엘리베이터가 자주 고장나는 등 불편한 환경이라고 합니다. 아파트는 냄새가 나고 혼잡하며, 주변 환경 또한 안전하지 않다고 묘사되어 있습니다.'"
+       "AIMessage(content='Victory Mansions은 윈스턴 스미스가 살고 있는 아파트입니다. 그 아파트는 계단으로 오르내리는 7층 건물이며, 리프트는 거의 작동하지 않습니다. 아파트 복도는 삶은 양배추와 오래된 러그 매트의 냄새가 났고, 벽에는 실내 전시용으로는 너무 큰 컬러 포스터가 붙어 있습니다. 아파트 내부에는 전기 스위치로 조절되는 텔레스크린이 있으며, 윈스턴은 창가로 이동하여 바깥 풍경을 바라봅니다. 아파트는 경제 절약을 위해 주간에는 전기가 차단되는 등 여러 가지 제약이 있습니다.')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,11 +22,14 @@
     "from langchain.document_loaders import UnstructuredFileLoader\n",
     "from langchain.text_splitter import CharacterTextSplitter\n",
     "from langchain.embeddings import OpenAIEmbeddings, CacheBackedEmbeddings\n",
-    "from langchain.vectorstores import Chroma\n",
+    "from langchain.vectorstores import FAISS\n",
     "from langchain.storage import LocalFileStore\n",
-    "from langchain.chains import RetrievalQA\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.schema.runnable import RunnablePassthrough\n",
     "\n",
-    "llm = ChatOpenAI()\n",
+    "llm = ChatOpenAI(\n",
+    "  temperature=0.1,\n",
+    ")\n",
     "\n",
     "cache_dir = LocalFileStore(\"./.cache/\")\n",
     "\n",
@@ -36,7 +39,7 @@
     "  chunk_overlap=100,\n",
     ")\n",
     "\n",
-    "loader = UnstructuredFileLoader(\"./files/chapter_one.docx\")\n",
+    "loader = UnstructuredFileLoader(\"./files/chapter_one.txt\")\n",
     "\n",
     "docs = loader.load_and_split(text_splitter=splitter)\n",
     "\n",
@@ -46,15 +49,31 @@
     "  embeddings, cache_dir\n",
     ")\n",
     "\n",
-    "vectorstore = Chroma.from_documents(docs, cached_embeddings)\n",
+    "vectorstore = FAISS.from_documents(docs, cached_embeddings)\n",
     "\n",
-    "chain = RetrievalQA.from_chain_type(\n",
-    "  llm=llm,\n",
-    "  chain_type=\"stuff\",\n",
-    "  retriever=vectorstore.as_retriever(),\n",
+    "retriver = vectorstore.as_retriever()\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "  [\n",
+    "    (\n",
+    "      \"system\",\n",
+    "      \"You are a helpful assistant. Answer questions using only the following context. If you don't know the answer just say you don't know, don't make it up:\\n\\n{context}\"\n",
+    "    ),\n",
+    "    (\"human\", \"{question}\")\n",
+    "  ]\n",
     ")\n",
     "\n",
-    "chain.run(\"Victory Mansions를 묘사해주세요.\")"
+    "chain = (\n",
+    "  {\n",
+    "    \"context\": retriver,\n",
+    "    \"question\": RunnablePassthrough(),\n",
+    "  }\n",
+    "  | prompt\n",
+    "  | llm\n",
+    ")\n",
+    "\n",
+    "chain.invoke(\"Victory Mansions을 묘사해줘\")\n",
+    "\n"
    ]
   }
  ],
