Stuff Documents Chain !

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -5,18 +5,7 @@
    "execution_count": 1,
    "id": "692c8937",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='Victory Mansions은 윈스턴 스미스가 살고 있는 아파트입니다. 그 아파트는 계단으로 오르내리는 7층 건물이며, 리프트는 거의 작동하지 않습니다. 아파트 복도는 삶은 양배추와 오래된 러그 매트의 냄새가 났고, 벽에는 실내 전시용으로는 너무 큰 컬러 포스터가 붙어 있습니다. 아파트 내부에는 전기 스위치로 조절되는 텔레스크린이 있으며, 윈스턴은 창가로 이동하여 바깥 풍경을 바라봅니다. 아파트는 경제 절약을 위해 주간에는 전기가 차단되는 등 여러 가지 제약이 있습니다.')"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.document_loaders import UnstructuredFileLoader\n",
@@ -39,7 +28,7 @@
     "  chunk_overlap=100,\n",
     ")\n",
     "\n",
-    "loader = UnstructuredFileLoader(\"./files/chapter_one.txt\")\n",
+    "loader = UnstructuredFileLoader(\"./files/document.txt\")\n",
     "\n",
     "docs = loader.load_and_split(text_splitter=splitter)\n",
     "\n",
@@ -70,10 +59,70 @@
     "  }\n",
     "  | prompt\n",
     "  | llm\n",
-    ")\n",
-    "\n",
-    "chain.invoke(\"Victory Mansions을 묘사해줘\")\n",
-    "\n"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3133e0e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='제가 알기로는 Aaronson이 유죄인지 아닌지에 대한 정보는 제공되지 않았습니다.')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke(\"Aaronson은 유죄인가요?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "359cf28f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='그가 쓴 메시지는 \"FREEDOM IS SLAVERY\"와 \"TWO AND TWO MAKE FIVE\"입니다.')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke(\"그가 테이블에 어떤 메세지를 썼나요?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "86cc57dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Julia는 Winston과 함께 이야기 중인 여성 캐릭터입니다. Winston은 그녀를 사랑하고 있으며, 그녀가 여전히 살아있고 그의 도움이 필요하다는 것을 알고 있습니다.')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke(\"Julia는 누구인가요?\")"
    ]
   }
  ],
